--- a/user-service.properties
+++ b/user-service.properties
@@ -2,3 +2,4 @@ server.port=8081
 spring.application.name=user-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 custom.message=Hello from Config Server (User Service)
+custom.message=Welcome from Config Server!
